Lu Biomes, Kilna Revamp, Some Shadows
* Add EVE shadow casting to outer system objects. Lighting is too thoroughly broken in the inner Ilio System and in the Pyri system, so only beyond Pyri are EVE shadows used.
* New texture by Orios for Kilna's clouds.
* New shape map for Cuspid.
* Levana made a new biome map for Lu with like 27 biomes, because she was having a bit of a Moon hyperfixation moment and wanted to make a geological map of Lu.
* Remove Progress Trees from all barycenters.
* Forbid ore contracts from being generated for gas giants, stars, and barycenters.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Kilna.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Kilna.cfg
@@ -184,11 +184,14 @@
                     0.1 = #000000
                     1.0 = #000000
                 }
+				normals = BUILTIN/cloud_normal
+				bumpMapScale = 15,8
+				bumpMapOffset = 0,0
 	        }
 			OnDemand
 			{
 				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Kilna.dds
-				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Kilna_normals.dds
+				//normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Kilna_normals.dds
 			}
 		}
 	}
