--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Scatterer/KilnaScatterer.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Scatterer/KilnaScatterer.cfg
@@ -28,6 +28,15 @@
 					sunColor = 0.25,0.175,0.11
 				}
 			}
+			//eclipseCasters
+			//{
+			//	Item = Smeezobbler
+			//	Item = Solin
+			//	Item = Floryet
+			//	Item = Drae
+			//	Item = Arach
+			//	Item = Whayt
+			//}
 		}
 		Item
 		{
@@ -55,6 +64,14 @@
 					sunColor = 0.25,0.175,0.11
 				}
 			}
+			//eclipseCasters
+			//{
+			//	Item = Kilna
+			//	Item = Solin
+			//	Item = Floryet
+			//	Item = Arach
+			//	Item = Whayt
+			//}
 		}
 		Item
 		{
@@ -82,6 +99,13 @@
 					sunColor = 0.25,0.175,0.11
 				}
 			}
+			//eclipseCasters
+			//{
+			//	Item = Kilna
+			//	Item = Solin
+			//	Item = Floryet
+			//	Item = Drae
+			//}
 		}
 	}
 }
