--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Scatterer/AlkinScatterer.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Scatterer/AlkinScatterer.cfg
@@ -28,6 +28,15 @@
 					sunColor = 0.25,0.175,0.11
 				}
 			}
+			//eclipseCasters
+			//{
+			//	//Item = Alkin
+			//	Item = Squangus
+			//	Item = Marith
+			//	Item = Radlun
+			//	Item = Ulen
+			//	Item = Ilmar
+			//}
 		}
 		Item
 		{
@@ -55,6 +64,15 @@
 					sunColor = 0.25,0.175,0.11
 				}
 			}
+			//eclipseCasters
+			//{
+			//	Item = Alkin
+			//	Item = Squangus
+			//	Item = Marith
+			//	Item = Radlun
+			//	//Item = Ulen
+			//	Item = Ilmar
+			//}
 		}
 		Item
 		{
@@ -82,7 +100,15 @@
 					sunColor = 0.25,0.175,0.11
 				}
 			}
-
+			//eclipseCasters
+			//{
+			//	Item = Alkin
+			//	Item = Squangus
+			//	Item = Marith
+			//	Item = Radlun
+			//	Item = Ulen
+			//	//Item = Ilmar
+			//}
 		}
 	}
 }
