--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
@@ -5,7 +5,7 @@
 		//you can change the name and displayName but please do not change the identifier.
 		name = Lu
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Cache/Lu.bin
-		identifier = PJ2/IlioC_b_Trojan
+		identifier = PJ2/Lu
 		Template
 		{
 			name = Mun
@@ -19,36 +19,196 @@
 			geeASL = 0.32
 			tidallyLocked = true
 			initialRotation = 120
-			biomeMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/PluginData/Lu_Biomes.png
-			//placeholder biome map--if you see this, it means i ran out of time!
+			biomeMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/PluginData/LevanaLu_Biomes.png
 			Biomes
 			{
 				Biome
 				{
-					name = NearsideLowlands
-					displayName = Nearside Lowlands
-					color = RGBA(95,66,84,255)
+					name = NearHighlands
+					displayName = Synpyrian Montes
+					color = RGBA(192,192,160,255)
 					value = 1
 				}
 				Biome
 				{
-					name = NearsideHighlands
-					displayName = Nearside Highlands
-					color = RGBA(207,183,147,255)
+					name = NearMidlands
+					displayName = Synpyrian Terrae
+					color = RGBA(160,160,128,255)
 					value = 1
 				}
 				Biome
 				{
-					name = FarsideLowlands
-					displayName = Farside Lowlands
-					color = RGBA(49,34,43,255)
+					name = NearLowlands
+					displayName = Synpyrian Planitiae
+					color = RGBA(96,64,88,255)
 					value = 1
 				}
 				Biome
 				{
-					name = FarsideHighlands
-					displayName = Farside Highlands
-					color = RGBA(106,93,75,255)
+					name = NearMaria
+					displayName = Synpyrian Maria
+					color = RGBA(64,32,56,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarHighlands
+					displayName = Antipyrian Montes
+					color = RGBA(192,192,186,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarMidlands
+					displayName = Antipyrian Terrae
+					color = RGBA(160,160,152,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarLowlands
+					displayName = Antipyrian Planitiae
+					color = RGBA(96,88,96,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarMaria
+					displayName = Antipyrian Maria
+					color = RGBA(64,56,64,255)
+					value = 1
+				}
+				Biome
+				{
+					name = DayRayCraters
+					displayName = Young Synpyrian Craters
+					color = RGBA(224,64,64,255)
+					value = 1
+				}
+				Biome
+				{
+					name = NightRayCraters
+					displayName = Young Antipyrian Craters
+					color = RGBA(224,128,128,255)
+					value = 1
+				}
+				Biome
+				{
+					name = DayBasins
+					displayName = Synpyrian Basins
+					color = RGBA(192,96,64,255)
+					value = 1
+				}
+				Biome
+				{
+					name = NightBasins
+					displayName = Antipyrian Basins
+					color = RGBA(192,160,96,255)
+					value = 1
+				}
+				Biome
+				{
+					name = OldBasins
+					displayName = Ancient Basins
+					color = RGBA(160,192,96,255)
+					value = 1
+				}
+				Biome
+				{
+					name = NearOcean
+					displayName = Oceanus Caldor
+					color = RGBA(56,8,40,255)
+					value = 1
+				}
+				Biome
+				{
+					name = RecentLava
+					displayName = Eratosthenian Maria
+					color = RGBA(40,8,96,255)
+					value = 1
+				}
+				Biome
+				{
+					name = GreaterFloodedBasin
+					displayName = Mare Sappho
+					color = RGBA(0,88,8,255)
+					value = 1
+				}
+				Biome
+				{
+					name = LesserFloodedBasin
+					displayName = Sinus Sodor
+					color = RGBA(16,64,56,255)
+					value = 1
+				}
+				Biome
+				{
+					name = NearCentralBasin
+					displayName = Synpyrian Mare Centralia
+					color = RGBA(192,64,192,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarCentralBasin
+					displayName = Antipyrian Mare Centralia
+					color = RGBA(192,128,192,255)
+					value = 1
+				}
+				Biome
+				{
+					name = NearNorthernBasin
+					displayName = Synpyrian Paludes Septentrionale
+					color = RGBA(0,80,128,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarNorthernBasin
+					displayName = Antipyrian Paludes Septentrionale
+					color = RGBA(0,80,80,255)
+					value = 1
+				}
+				Biome
+				{
+					name = NearNorthernMaria
+					displayName = Synpyrian Mare Boreale
+					color = RGBA(88,64,88,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarNorthernMaria
+					displayName = Antipyrian Mare Boreale
+					color = RGBA(64,48,64,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarsideBasinMountains
+					displayName = Montes Concentricum
+					color = RGBA(160,128,160,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarsideBasinFloor
+					displayName = Novum Planitia
+					color = RGBA(96,64,96,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarsideBasinBlanket
+					displayName = Inner Ejecta Blanket
+					color = RGBA(96,192,160,255)
+					value = 1
+				}
+				Biome
+				{
+					name = OverlainFarsideBasin
+					displayName = Vastus Incognitum
+					color = RGBA(192,96,160,255)
 					value = 1
 				}
 			}
