--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/DopaleScatterer.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/DopaleScatterer.cfg
@@ -28,7 +28,12 @@
 					sunColor = 1,1,1
 				}
 			}
+			//eclipseCasters
+			//{
+			//	Item = Beddul
+			//}
 		}
+		
 	}
 }
 @Scatterer_atmosphere
