--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/Scatterer/PlanetsListPatch.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/Scatterer/PlanetsListPatch.cfg
@@ -28,17 +28,18 @@
 					sunColor = 1,1,1
 				}
 			}
-			eclipseCasters
-			{
-				item = Bifröst
-				item = Máni
-				item = Bil
-				item = Heimdall
+			//eclipseCasters
+			//{
+			//	Item = Bifröst
+			//	Item = Máni
+			//	Item = Bil
+			//	Item = Heimdall
 				
-				item = IlioC_c			//may need to change post-integration
-				item = IlioC_Giant_d	//may need to change post-integration
-				item = IlioC_dt			//may need to change post-integration
-			}
+			//	Item = Haut-Oklo
+			//	Item = Zhandar
+			//	Item = Beddul
+			//	Item = Dopale
+			//}
 		}
 		Item
 		{
@@ -66,17 +67,18 @@
 					sunColor = 1,1,1
 				}
 			}
-			eclipseCasters
-			{
-				item = Bifröst
-				item = Máni
-				item = Jötunn
-				item = Heimdall
+			//eclipseCasters
+			//{
+			//	Item = Bifröst
+			//	Item = Máni
+			//	Item = Jötunn
+			//	Item = Heimdall
 				
-				item = IlioC_c			//may need to change post-integration
-				item = IlioC_Giant_d	//may need to change post-integration
-				item = IlioC_dt			//may need to change post-integration
-			}
+			//	item = Haut-Oklo
+			//	item = Zhandar
+			//	item = Beddul
+			//	item = Dopale
+			//}
 		}
 	}
 }
