--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/X-Bifrost_ImprovedDisk.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/X-Bifrost_ImprovedDisk.cfg
@@ -28,6 +28,7 @@
 		{
 			name = Jool
 			removeAtmosphere = true
+			removeProgressTree = True
 		}
 		Properties
 		{
@@ -58,6 +59,7 @@
 		{
 			name = Jool
 			removeAtmosphere = true
+			removeProgressTree = True
 		}
 		Properties
 		{
