--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_0_BarycenterPW.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_0_BarycenterPW.cfg
@@ -8,12 +8,14 @@
 		Template
 		{
 			name = Bop
+			removePQS = True
+			removeProgressTree = True
 		}
 		Properties
 		{
 			description = Phrye-Wepor is a binary asteroid system orbiting Kialla at a distance. This makes it somewhat unique, being a circumbinary binary system. Additionally, the twin asteroids themselves are quite interesting--despite being the same size, Phrye is more than twice as massive, and they each have roughly opposite spectral features. Overall, this makes for quite an interesting destination, if you can make it out this far.\n [electricpants]
 			displayName = Phyre-Wepor Barycenter^N
-			radius = 9000
+			radius = 1000
 			mass = 1.95645e17
 			inverseRotThresholdAltitude = 0
 			//1.20345e17+7.53e16
@@ -41,8 +43,6 @@
 			invisible = true
 		}
 		!Atmosphere{}
-		!PQS
-		{
-		}
+		!PQS{}
 	}
 }
