--- a/GameData/PJ2/Resources/OreAvailability.cfg
+++ b/GameData/PJ2/Resources/OreAvailability.cfg
@@ -363,3 +363,63 @@ PLANETARY_RESOURCE
 		Dispersal = 0
 	}
 }
+PLANETARY_RESOURCE
+{
+	ResourceName = Ore
+	ResourceType = 0
+	PlanetName = BarycenterPW
+	
+	Distribution
+	{
+		PresenceChance = 0
+		MinAbundance = 0
+		MaxAbundance = 0
+		Variance = 0
+		Dispersal = 0
+	}
+}
+PLANETARY_RESOURCE
+{
+	ResourceName = Ore
+	ResourceType = 0
+	PlanetName = Twilight
+	
+	Distribution
+	{
+		PresenceChance = 0
+		MinAbundance = 0
+		MaxAbundance = 0
+		Variance = 0
+		Dispersal = 0
+	}
+}
+@Contracts
+{
+	@ISRU
+	{
+		@RESOURCE_REQUEST:HAS[#Name[Ore]]
+		{
+			Forbidden = Sun
+			Forbidden = Phosphol
+			Forbidden = Vespol
+			Forbidden = Pyri
+			Forbidden = Ollo
+			Forbidden = Alkin
+			Forbidden = Kilna
+			Forbidden = Gerro
+			Forbidden = Sandevistan-Gerro_Barycenter
+			Forbidden = Tritonis
+			Forbidden = Zhandar
+			Forbidden = Bifröst
+			Forbidden = BifrostMagnetodiskHolderHolder
+			Forbidden = BifrostMagnetodiskHolder
+			Forbidden = Glice
+			Forbidden = Oynag
+			Forbidden = Atrium
+			Forbidden = Descry
+			Forbidden = Turtlestar
+			Forbidden = BarycenterPW
+			Forbidden = Twilight
+		}
+	}
+}
