--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
@@ -16,6 +16,8 @@
 		{
 			name = Mun
 			removeAllPQSMods = True
+			removePQS = True
+			removeProgressTree = True
 		}
 		Orbit
 		{
@@ -42,7 +44,7 @@
 		{
 			displayName = Gerro-Sandevistan Barycenter
 			description = The center of mass between Gerro and Sandevistan.\n -Interplanet Janet & Marshall (Myth)
-			radius = 4096
+			radius = 100000
 			mass = 5.97219e22
 			@mass *= 31.89
 			rotates = true
@@ -72,79 +74,6 @@
 				shininess = 0.03
 				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Blank.png
  				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Blank.png
-			}
-		}
-		PQS
-		{
-			materialType = AtmosphericTriplanarZoomRotation
-			minLevel = 2
-			maxLevel = 5
-			minDetailDistance = 6
-			maxQuadLengthsPerFrame = 0.03
-			fadeStart = 68000
-			fadeEnd = 70000
-			deactivateAltitude = 100000
-			Material
-			{
-				factor = 14.26
-				factorBlendWidth = 0.05
-				factorRotation = 75
-				saturation = 1.15
-				contrast = 1
-				tintColor = 1,1,1,0
-				specularColor = 0.191176474,0.191176474,0.191176474,1
-				albedoBrightness = 1.64
-				steepPower = 1.05
-				steepTexStart = 30000
-				steepTexEnd = 60000
-				steepTex = BUILTIN/MunCliff [Diffuse]
-				steepTexScale = 1,1
-				steepTexOffset = 0,0
-				steepBumpMap = BUILTIN/MunCliff [Normal]
-				steepBumpMapScale = 1,1
-				steepBumpMapOffset = 0,0
-				steepNearTiling = 500
-				steepTiling = 350
-				lowTexScale = 1,1
-				lowTexOffset = 0,0
-				lowTiling = 1
-				midTex = BUILTIN/Minmus [Diffuse]
-				midTexScale = 1,1
-				midTexOffset = 0,0
-				midTiling = 150000
-				midBumpMap = BUILTIN/Minmus [Normal]
-				midBumpMapScale = 1,1
-				midBumpMapOffset = 0,0
-				midBumpTiling = 150000
-				highTexScale = 1,1
-				highTexOffset = 0,0
-				highTiling = 1.5
-				lowStart = -1
-				lowEnd = -1
-				highStart = 1
-				highEnd = 1
-				globalDensity = 1
-				fogColorRampScale = 1,1
-				fogColorRampOffset = 0,0
-				planetOpacity = 0
-				oceanFogDistance = 1000
-			}
-			Mods
-			{
-				VertexHeightMap
-				{
-					order = 1
-					enabled = True
-					name = Height
-						map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Blank.png
-						offset = 0
-						deformity = 0
-				}
-				VertexColorMap
-				{
-					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Blank.png
-					order = 200000
-				}
 			}
 		}
 	}
