--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/Scatterer/Sinacin_Atmospheres.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/Scatterer/Sinacin_Atmospheres.cfg
@@ -28,6 +28,13 @@
 					sunColor = 1,0.71,0.44
 				}
 			}
+			//eclipseCasters
+			//{
+			//	Item = Rangon
+			//	Item = Glice
+			//	Item = Caua
+			//	Item = Alia
+			//}
 		}
 		Item
 		{
@@ -55,6 +62,12 @@
 					sunColor = 1,0.71,0.44
 				}
 			}
+			//eclipseCasters
+			//{
+			//	Item = Sinacin
+			//	Item = Caua
+			//	Item = Alia
+			//}
 		}
 		Item
 		{
@@ -82,6 +95,12 @@
 					sunColor = 0.8,0.568,0.44
 				}
 			}
+			//eclipseCasters
+			//{
+			//	Item = Sinacin
+			//	Item = Glice
+			//	Item = Alia
+			//}
 		}
 		Item
 		{
@@ -109,6 +128,13 @@
 					sunColor = 1,0.71,0.44
 				}
 			}
+			//eclipseCasters
+			//{
+			//	Item = Sinacin
+			//	Item = Glice
+			//	Item = Caua
+			//	Item = Alia
+			//}
 		}
 	}
 }
