Science values, More Gwargin Moons, Bifrost moon tweaks.
* Add science multipliers balancing for Bifrost system and Sinacin system.
* Add two more moons to Gwargin: Phomos and Bercue.
* Rewritten descriptions for Gwargin system.
* Backlit ring texture for Gwargin for Sabine's new ring shader patch.
* Changes to HazardousBody on Bifrost and its moons.
* Triple Ljos' size.

--- a/GameData/PJ2/Career/ScienceBalancing.cfg
+++ b/GameData/PJ2/Career/ScienceBalancing.cfg
@@ -46,7 +46,7 @@
 				flyingHighDataValue = 0.9
 				inSpaceLowDataValue = 1
 				inSpaceHighDataValue = 1.5
-				recoveryValue = 1
+				recoveryValue = 1.5 //higher than one because con-fucking-gratulations if you can land on Armstrong with even a Flea-hopper.
 				flyingAltitudeThreshold = 23500
 				spaceAltitudeThreshold = 475000
 			}
@@ -296,7 +296,7 @@
 			{
 				inSpaceLowDataValue = 2
 				inSpaceHighDataValue = 5
-				recoveryValue = 1
+				recoveryValue = 2
 				spaceAltitudeThreshold = 5400000
 			}
 		}
@@ -335,6 +335,222 @@
 				recoveryValue = 6
 				flyingAltitudeThreshold = 25000
 				spaceAltitudeThreshold = 400000
+			}
+		}
+	}
+	
+	@Body[Bifröst]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				inSpaceLowDataValue = 7
+				inSpaceHighDataValue = 6	//Flying value missing since the oblate planet can't have an atmosphere within the confines of the game engine.
+				recoveryValue = 6
+				spaceAltitudeThreshold = 24000000	//Two thirds the orbit of the ionians, below the plasma torus. Science experiments comment on the change in plasma environment, so keeping this around here would be good if it can be.
+			}
+		}
+	}
+	@Body[Máni]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 10
+				inSpaceLowDataValue = 8
+				inSpaceHighDataValue = 6
+				recoveryValue = 6
+				spaceAltitudeThreshold = 130000
+			}
+		}
+	}
+	@Body[Bil]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 10
+				splashedDataValue = 12		//Lava is dangerous, so reward more science.
+				inSpaceLowDataValue = 8
+				inSpaceHighDataValue = 6
+				recoveryValue = 6
+				spaceAltitudeThreshold = 30000	//The thin atmosphere would start to become somewhat noticeable around this altitude - it is excluded for gameplay, as it only has gameplay-significant effects when impacting from a Bifröst escape trajectory
+			}
+		}
+	}
+	@Body[Ljós]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 9
+				splashedDataValue = 11		//While much of the moon, lava is dangerous, so reward more science.
+				inSpaceLowDataValue = 8
+				inSpaceHighDataValue = 6
+				recoveryValue = 5.5
+				spaceAltitudeThreshold = 2500	//Just above maximum terrain altitude
+			}
+		}
+	}
+	@Body[Heimdall]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 10
+				inSpaceLowDataValue = 8
+				inSpaceHighDataValue = 6
+				recoveryValue = 6
+				spaceAltitudeThreshold = 10000
+			}
+		}
+	}
+	@Body[Þórr]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 10
+				inSpaceLowDataValue = 8
+				inSpaceHighDataValue = 6
+				recoveryValue = 7
+				spaceAltitudeThreshold = 10000
+			}
+		}
+	}
+	@Body[Jötunn]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 10
+				splashedDataValue = 12
+				flyingLowDataValue = 9
+				flyingHighDataValue = 8.5
+				inSpaceLowDataValue = 8
+				inSpaceHighDataValue = 6
+				recoveryValue = 8
+				flyingAltitudeThreshold = 30000
+				spaceAltitudeThreshold = 533026
+			}
+		}
+	}
+	
+	//Sinacin System
+	@Body[Sinacin]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 30
+				splashedDataValue = 32
+				flyingLowDataValue = 15
+				flyingHighDataValue = 8
+				inSpaceLowDataValue = 1.2
+				inSpaceHighDataValue = 1
+				recoveryValue = 50
+				spaceAltitudeThreshold = 1729682
+				flyingAltitudeThreshold = 3000
+			}
+		}
+	}
+	@Body[Rangon]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 8
+				inSpaceLowDataValue = 7.5
+				inSpaceHighDataValue = 7
+				recoveryValue = 8
+				spaceAltitudeThreshold = 7000
+			}
+		}
+	}
+	@Body[Glice]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				flyingLowDataValue = 8.5
+				flyingHighDataValue = 8
+				inSpaceLowDataValue = 7
+				inSpaceHighDataValue = 6
+				recoveryValue = 8
+				spaceAltitudeThreshold = 1000000
+				flyingAltitudeThreshold = 50000
+			}
+		}
+	}
+	@Body[Caua]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 10
+				flyingLowDataValue = 9
+				flyingHighDataValue = 8.5
+				inSpaceLowDataValue = 7
+				inSpaceHighDataValue = 6
+				recoveryValue = 8
+				spaceAltitudeThreshold = 300000
+				flyingAltitudeThreshold = 25000
+			}
+		}
+	}
+	@Body[Alia]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				inSpaceLowDataValue = 7
+				inSpaceHighDataValue = 6
+				recoveryValue = 8
+				spaceAltitudeThreshold = 200000
+				flyingAltitudeThreshold = 50000
+				landedDataValue = 8
+			}
+		}
+	}
+	@Body[Jones]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 8
+				flyingLowDataValue = 7
+				flyingHighDataValue = 6
+				inSpaceLowDataValue = 5
+				inSpaceHighDataValue = 4
+				recoveryValue = 7
+				spaceAltitudeThreshold = 5000
+				flyingAltitudeThreshold = 750
 			}
 		}
 	}
