--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/0_Gwargin.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/0_Gwargin.cfg
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Gwargin^N
-			description = Gwargin is not easily visible from Armstrong, in fact it's far from visible from Armstrong. This tiny planet is the runt of the inner system's litter. Astronomer Ogilvy Kerman is credited with first observing Gwargin and its two largest satellites, which were first observed as "ejections" from the Gwartian Surface. This was due to their discovery aligning with the end of a double occultation, where they came out from behind the planet's disk and rings, making them appear as though they were objects being launched off the surface. On the off-chance the public interpreted these as spacecraft, launched by an advanced Gwartian society, the next day Ogilvy and his team made a press release. Ogilvy assured there was no danger, as he was convinced there could be no living thing on that remote, forbidding planet.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
+			description = Gwargin is not easily visible from Armstrong, as this tiny planet is the runt of the inner system's litter. Originally thought to be the outermost planet of the Inner Ilio System, Gwargin was determined by the first person to bother to do the math to be a leading trojan of Gerro-Sandevistan, and simultanously the largest coorbital inwards of Pyri. Gwargin is now understood to be a hypobaric planet, much like Armstrong but far smaller, and encircled in a bright ring of debris. Younger generations who do not recall the homeworlds of their ancestors have taken this to mean Gwargin is a particularly hospitable place, and potentially one with its own intelligent lifeforms, but this could not be further from the truth. Probably.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			timewarpAltitudeLimits = 0 25 50 100 150 200 250 300
 			tidallyLocked = False
 			radius = 338950
@@ -343,6 +343,12 @@
 				useNewShader = true
 				penumbraMultiplier = 8
 				steps = 1000
+
+				//Sabine Backlit Patch Support
+				albedoStrength = 1
+				scatteringStrength = 1
+				anisotropy = 0.7
+				backlitTexture = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/Gwargin_RingsBacklit.dds
 			}
 		}
 		Orbit
