--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/1_Phe.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/1_Phe.cfg
@@ -2,6 +2,7 @@
 {
 	Body
 	{
+		//you can change the name and displayName but please do not change the identifier.
 		name = Phe
 		identifier = PJ2/Phe
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/Cache/Phe.bin
@@ -13,7 +14,7 @@
 		Properties
 		{
 			displayName = Phe^N
-			description = An occultation of a background star by Gwargin revealed two substantial gaps in its ring system. It is thought that there might be a small satellite embedded within the inner of the two large gaps.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
+			description = An occultation of a background star by Gwargin revealed two substantial gaps in its ring system. Embedded within the inner of the two large gaps is the suspected moon Phe. Phe is potentially the smallest of Gwargin's five satellites, though the exact scale cannot be determined without a direct close-proximity observation, assuming it is even real.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			timewarpAltitudeLimits = 0 25 50 100 150 200 250 300
 			tidallyLocked = true
 			radius = 2000
@@ -29,13 +30,24 @@
  		        {
 				//uh
     		        }
+			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/GenericMoon_Biomes.png
+			Biomes
+			{
+				Biome
+				{
+					name = Surface
+					displayName = Surface
+					color = #bf8988
+					value = 1
+				}
+			}
 		}
 		Orbit
 		{
 			referenceBody = PJ2/Gwargin
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = 0.525,0.5096,0.479,1
+			color = 0.225,0.2096,0.179,1
 			
 			semiMajorAxis = 668000
 			
