--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/2_Ber.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/2_Ber.cfg
@@ -2,6 +2,7 @@
 {
 	Body
 	{
+		//you can change the name and displayName but please do not change the identifier.
 		name = Ber
 		identifier = PJ2/Ber
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/Cache/Ber.bin
@@ -13,7 +14,7 @@
 		Properties
 		{
 			displayName = Ber^N
-			description = An occultation of a background star by Gwargin revealed two substantial gaps in its ring system. It is thought that there might be a small satellite embedded within the outer of the two large gaps.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
+			description = An occultation of a background star by Gwargin revealed two substantial gaps in its ring system. Embedded within the outer of the two large gaps is Ber, hypothetically anyway. The Phe and Ber Gaps were discovered and named by Elphinstone Limman. Elphinstone's pioneering work on the study of ring systems via transits has revealed new insights on the structures of nearly all known rings systems from Ollo to Descry.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			timewarpAltitudeLimits = 0 25 50 100 150 200 250 300
 			tidallyLocked = true
 			radius = 2000
@@ -29,13 +30,24 @@
  		        {
 				//uh
     		        }
+			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/GenericMoon_Biomes.png
+			Biomes
+			{
+				Biome
+				{
+					name = Surface
+					displayName = Surface
+					color = #bf8988
+					value = 1
+				}
+			}
 		}
 		Orbit
 		{
 			referenceBody = PJ2/Gwargin
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = 0.525,0.5096,0.479,1
+			color = 0.225,0.2096,0.179,1
 			
 			semiMajorAxis = 690000
 			
