--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/3_Deibos.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/3_Deibos.cfg
@@ -14,43 +14,40 @@
 		Properties
 		{
 			displayName = Deibos^N
-			description = Deibos? Oh yeah, Deibos is the little moon slowly crumbling under the tidal forces of Gwargin. It's fairly obscure, and not much is known about it aside from its small size and close in orbital position. Deibos is named for a Goddess of Dreariness.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
+			description = Deibos, named for a Goddess of Dreariness, is the little moon slowly crumbling under the tidal forces of Gwargin. It's fairly obscure, and not much is known about it aside from its small size and close in orbital position. Deibos, and Phomos, are most well known for their over-the-radio discovery sparking panic. During the broadcast the radio host off-handedly suggested the these exceptionally small moons could in fact be spacecraft launched by an advanced Gwartian Civilization. This prompted Ogilvy Kerman, the original discoverer of the two, and his team to release a press release the following day. They assured there was no danger, as they were convinced there could be no living thing on that remote, forbidding planet.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			timewarpAltitudeLimits = 0 25 50 100 150 200 250 300
 			tidallyLocked = true
 			radius = 5400
-			sphereOfInfluence = 10000
 			inverseRotThresholdAltitude = 4500
 			initialRotation = 220
 			
-
-			// 1/100 earth mass in kilograms
-			mass = 2.0659e14
+			geeASL = 0.00450
 			ScienceValues
  		        {
 				//uh
     		        }
-			biomeMap = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Skle_Biomes.png
+			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/Phomos_Biomes.png
 			Biomes
 			{
 				Biome
 				{
-					name = Eyes
-					displayName = Eyes
-					color = #0800ff
-					value = 1
-				}
-				Biome
-				{
-					name = Bridge
-					displayName = Bridge
-					color = #00ffff
-					value = 1
-				}
-				Biome
-				{
-					name = Generic
+					name = Surface
 					displayName = Surface
-					color = #999999
+					color = #9e9e9e
+					value = 1
+				}
+				Biome
+				{
+					name = Craters
+					displayName = Craters
+					color = #ce755c
+					value = 1
+				}
+				Biome
+				{
+					name = Rills
+					displayName = Rills
+					color = #ff0000
 					value = 1
 				}
 			}
