--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1q-Ljos.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1q-Ljos.cfg
@@ -13,13 +13,14 @@
 		{
 			displayName = Ljós^N
 			description = Ljós is a curious little moon. It behaves as though it is held in orbit by the massive Máni nearby, and yet it in actuality orbits Bifröst, merely never straying from its large neighbor - the first discovered "quasi-subsatellite". At such proximity to such a massive planet, however, the high eccentricity orbit this forces Ljós into causes it to be wracked by tidal forces extreme enough to heat it to a glow - though scientists wonder how it could survive that with such a small size.\n\n<color=#2f8b1b> - WarriorSabe</color>
-			radius = 6625
-			gravParameter = 4677633.27977	//really dense; mostly iron with some lava on top. 0.0109 gees
-			tidallyLocked = true
+			radius = 19875
+			gravParameter = 126296098.554	//really dense; mostly iron with some lava on top. 0.0326 gees
+			tidallyLocked = false
+			rotationPeriod = 13635
 			initialRotation = 78
-			inverseRotThresholdAltitude = 5000
-			maxZoom = 15000
-			sphereOfInfluence = 13497	//Half of hill sphere, representing approximate distance of prograde orbit stability.
+			inverseRotThresholdAltitude = 15000
+			maxZoom = 45000
+			sphereOfInfluence = 40491	//Half of hill sphere, representing approximate distance of prograde orbit stability.
 			
 			ScienceValues	//Values are placeholders. Will need to change once homeworld is revealed, but factors specific to this world must be considered when doing so. Relevant notes provided ahead. Remove this comment when final values are entered.
 			{
@@ -28,11 +29,11 @@
 				inSpaceLowDataValue = 8
 				inSpaceHighDataValue = 6
 				recoveryValue = 1
-				spaceAltitudeThreshold = 2500	//Just above maximum terrain altitude
+				spaceAltitudeThreshold = 7500	//Just above maximum terrain altitude
 			}
 			biomeMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Ljos_Biome.png
 			Biomes
-			{						//All five biomes are accessible within extreme proximity of each other (<300m in places; most landing sites similarly near at least one other).
+			{						//All five biomes are accessible within extreme proximity of each other (<1km in places; most landing sites similarly near at least one other).
 				Biome				//They each have their own challenges to some extent, but their proximity and thus likelihood of biome-hopping is to be kept in mind.
 				{
 					name = Flats
@@ -74,7 +75,7 @@
 		{
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Small_Icon.png		//Custom icon reused from Edge of Eternity
 			color = 0.43,0.11,0.02,1
-			referenceBody = PJ2/Bifrost
+			referenceBody = Bifröst
 			semiMajorAxis = 35880913
 			eccentricity = 0.122	//As a quasisatellite, Ljós is forced into a high eccentricity orbit, leading to enormous tidal heat fluxes 20600x those Io receives, leading to tempeatures over 1000K. Even considering its miniscule size, total loads are still 28x Io as a result.
 			inclination = 4.29
@@ -114,8 +115,8 @@
 				VertexMitchellNetravaliHeightMap
 				{
 					map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Ljos_Shape.dds
-					deformity = 3371
-					offset = -1391
+					deformity = 10113
+					offset = -4173
 					scaleDeformityByRadius = false
 					
 					B = 0.3
@@ -226,7 +227,6 @@
             Instance
             {
                 ambientTemp = 2100		//Parts in KSP have unrealistically high heat tolerances, so make lava unrealistically hot by a similar margin to account for this, thus providing an appropriate capability of melting parts.
-				@ambientTemp /= 0.8		//Parts only reach 80% of ambientTemp at max, so compenste
 				sumTemp = true
                 AltitudeCurve
                 {
