--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1t-Bil.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1t-Bil.cfg
@@ -80,7 +80,7 @@
 		{
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Big_Icon.png		//Custom icon reused from Edge of Eternity
 			color = 0.46,0.48,0.58,1
-			referenceBody = PJ2/Bifrost
+			referenceBody = Bifröst
 			semiMajorAxis = 35880913
 			eccentricity = 0.022		//Bil's tadpole orbit keeps its eccentricity slightly high, which has marked tidal heating effects: 670x the flux Io gets, though "only" 470x in total absolute amount with its smaller size.
 			inclination = 1.16
@@ -363,7 +363,6 @@
             Instance
             {
                 ambientTemp = 1900		//Parts in KSP have unrealistically high heat tolerances, so make lava unrealistically hot by a similar margin to account for this, thus providing an appropriate capability of melting parts.
-				@ambientTemp /= 0.8		//Parts only reach 80% of ambientTemp at max, so compenste
 				sumTemp = true
                 AltitudeCurve
                 {
