--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/3-Thorr.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/3-Thorr.cfg
@@ -34,7 +34,7 @@
 				Biome
 				{
 					name = Cathode
-					displayName = Cathodic Surface		//Trailing hemisphere. Magnetodisk ring current causes electrons to impact this surface and build a charge differential.
+					displayName = Cathodic Surface		//Trailing hemisphere. Magnetodisk ring current causes electrons to impact this surface, reducing it, and build a charge differential.
 					value = 1
 					color = RGBA(130,130,130,255)
 				}
@@ -65,7 +65,7 @@
 		{
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Small_Icon.png		//Custom icon reused from Edge of Eternity
 			color = 0.45,0.42,0.40,1
-			referenceBody = PJ2/Bifrost
+			referenceBody = Bifröst
 			semiMajorAxis = 129893785
 			eccentricity = 0.011
 			inclination = 0.04
@@ -149,9 +149,8 @@
         {
             Instance	//Resistive and shocked plasma heating of and around the spikes
             {
-                ambientTemp = 2100		//Parts in KSP have unrealistically high heat tolerances, so make plasma unrealistically hot by a similar margin to account for this, thus providing an appropriate capability of melting parts.
-				@ambientTemp /= 0.8		//Parts only reach 80% of ambientTemp at max, so compenste
-				sumTemp = true
+                ambientTemp = 700		//Parts in KSP have unrealistically high heat tolerances, so make plasma unrealistically hot by a similar margin to account for this, thus providing an appropriate capability of melting parts. Also account for existing heat.
+				sumTemp = false
 				heatMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Thorr_Heat.png	//Concentrates around the tips of the spikes
                 AltitudeCurve
                 {
@@ -167,9 +166,8 @@
             }
             Instance	//Resistive heating of surface
             {
-                ambientTemp = 800		//Parts in KSP have unrealistically high heat tolerances, so make surface unrealistically hot by a similar margin to account for this, thus providing an appropriate capability of melting parts.
-				@ambientTemp /= 0.8		//Parts only reach 80% of ambientTemp at max, so compenste
-				sumTemp = true
+                ambientTemp = 300		//Parts in KSP have unrealistically high heat tolerances, so make surface unrealistically hot by a similar margin to account for this, thus providing an appropriate capability of melting parts. Also account for existing heat.
+				sumTemp = false			//Don't add to main heat
                 AltitudeCurve
                 {
 					key = 2500 1
