--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek.cfg
@@ -37,7 +37,7 @@
 		Orbit
 		{
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = 0.5,0.5,0.5,1
+			color = 0.5,0.5,0.45,1
 			
 			referenceBody = PJ2/AB_Barycenter
 			//1 kAU (kerbal-scale AU)
@@ -59,14 +59,19 @@
 		
 			Material
 			{
-				texture = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\pj2gasgiantColor.png
-				normals = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\pj2gasgiantNormal.png
+				
 				rimColorRamp = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\Blue.png
+				rimPower = 0.4
+				rimBlend = 0.2
 				color = 1, 1, 1, 1
 				specColor = 0, 0, 0, 1
 				shininess = 0.0
 			}
-		
+			OnDemand
+			{
+				texture = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\gasplanet3v3.dds
+				normals = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\TechoGIantNormal.dds
+			}
 		}
 	}
 }
