--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
@@ -30,7 +30,7 @@
 		Orbit
 		{
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = 0.5,0.5,0.5,1
+			color = 0.373077095,0.292307824,0.257692039,1
 			
 			referenceBody = PJ2/Tritonis
 			//1 kAU (kerbal-scale AU)
@@ -40,6 +40,7 @@
 			argumentOfPeriapsis = 180
 			longitudeOfAscendingNode = 221
 			meanAnomalyAtEpochD = 61
+			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Mid.png
 		}
 		
 		ScaledVersion
