--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_B.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_B.cfg
@@ -30,7 +30,7 @@
 		Orbit
 		{
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = 0.5,0.5,0.5,1
+			color = 0.80000025,0.784615576,0.742307782,1
 			
 			referenceBody = PJ2/Tritonis
 			//1 kAU (kerbal-scale AU)
