--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_C.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_C.cfg
@@ -29,7 +29,7 @@
 		Orbit
 		{
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = 0.5,0.5,0.5,1
+			color = 0.407692313,0.284615278,0.211538345,1
 			
 			referenceBody = PJ2/Tritonis
 
